syntax = "proto3";

option java_package = "com.lizhengpeng.bigger.java.grpc";
option java_multiple_files = false;
option java_outer_classname = "GrpcServer";

message GrpcRequest {
  string requestId = 1;
  int32 requestIndex = 2;
}

service PrintService {
  rpc print(GrpcRequest) returns (GrpcRequest) {}
}

service EchoService {
  rpc echo(GrpcRequest) returns (GrpcRequest) {}
}

message Payload{
  string type = 1;
  string response = 2;
}

service FallbackService{
  rpc unaryEcho(Payload) returns(Payload);
  rpc clientStreamEcho(stream Payload) returns(Payload);
  rpc serverStreamEcho(Payload) returns (stream Payload);
  rpc doubleStreamEcho(stream Payload) returns (stream Payload);
}